fix: Horizontal scroll issue in login page

--- a/assets/css/personal-information.css
+++ b/assets/css/personal-information.css
@@ -51,7 +51,7 @@ body {
 .main-container {
     display: flex;
     flex-direction: column;
-    width: 100vw;
+    width: 100%;
     min-height: 100vh;
     justify-content: center;
     align-items: center;
